# fast_asio

./: .gitmodules  CMakeLists.txt  README.md
benchmark/: client.cc  native_asio_client.cc  native_asio_server.cc  server.cc  stat.hpp
examples/: client.cc  root_certificates.hpp  server.cc  server_certificate.hpp  ssl_client.cc  ssl_server.cc  websocket_client.cc  websocket_server.cc
fast_asio/: asio_include.h  async_guard.hpp  buffer_adapter.hpp  error_code.hpp  fast_asio.hpp  fast_beast.hpp  fast_quic.hpp  fast_ssl.hpp  hooked_asio.h  method_adapter.hpp  packet_policy.hpp  packet_read_stream.hpp  packet_read_stream_base.hpp  packet_stream.hpp  packet_write_stream.hpp
fast_asio/adapter/: beast_websocket_adapter.hpp
fast_asio/optimize_asio/1_69_0/: epoll_reactor.ipp
fast_asio/quic/: basic_multi_stream_socket.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  quic.hpp  quic_socket_service.hpp
fast_asio/quic/detail/: basic_socket.hpp  basic_socket_acceptor.hpp  clock.hpp  common.hpp  connection_visitor.hpp  connection_visitor.ipp  header_parser.hpp  session_handle.hpp  session_handle.ipp  stream_handle.hpp  stream_handle.ipp  task_runner_service.hpp
